# recyclem8

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/: Model Notice  classifications.json  config.json  frozen_taco.pbtxt
include/: classifier.h  confighandler.h  databasehandler.h  opencv_handler.h  recyclem8.h  settingsmenu.h  statisticsmenu.h
source/: classifier.cpp  confighandler.cpp  databasehandler.cpp  main.cpp  opencv_handler.cpp  recyclem8.cpp  settingsmenu.cpp  statisticsmenu.cpp
ui/: recyclem8.ui  settingsmenu.ui  statisticsmenu.ui
